Renamed "Renderer" directory to "rendering"

--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -269,7 +269,7 @@
     <None Include="vendor\include\glm\gtx\wrap.inl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Renderer\renderer.h" />
+    <ClInclude Include="src\rendering\renderer.h" />
     <ClInclude Include="src\application.h" />
     <ClInclude Include="src\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="src\imgui\backends\imgui_impl_opengl3.h" />
@@ -282,7 +282,7 @@
     <ClInclude Include="src\imgui\imstb_truetype.h" />
     <ClInclude Include="src\imgui\misc\cpp\imgui_stdlib.h" />
     <ClInclude Include="src\imgui\misc\single_file\imgui_single_file.h" />
-    <ClInclude Include="src\Renderer\shaderProgram.h" />
+    <ClInclude Include="src\rendering\shaderProgram.h" />
     <ClInclude Include="vendor\include\glad\glad.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3native.h" />
@@ -572,7 +572,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glObjects.h" />
-    <ClCompile Include="src\Renderer\renderer.cpp" />
+    <ClCompile Include="src\rendering\renderer.cpp" />
     <ClCompile Include="src\application.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\imgui\backends\imgui_impl_glfw.cpp" />
@@ -584,7 +584,7 @@
     <ClCompile Include="src\imgui\imgui_widgets.cpp" />
     <ClCompile Include="src\imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Renderer\shaderProgram.cpp" />
+    <ClCompile Include="src\rendering\shaderProgram.cpp" />
     <ClCompile Include="vendor\include\glm\detail\glm.cpp" />
   </ItemGroup>
   <ItemGroup>
