--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -285,6 +285,7 @@
     <ClInclude Include="src\rendering\shaderProgram.h" />
     <ClInclude Include="src\scene\scene.h" />
     <ClInclude Include="src\scene\terrain.h" />
+    <ClInclude Include="src\scene\vertex.h" />
     <ClInclude Include="vendor\include\glad\glad.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3native.h" />
