--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -132,6 +132,8 @@
   <ItemGroup>
     <None Include="README.md" />
     <None Include="src\scene\README.md" />
+    <None Include="src\shaders\fragment\simple.frag" />
+    <None Include="src\shaders\vertex\simple.vert" />
     <None Include="vendor\include\glm\detail\func_common.inl" />
     <None Include="vendor\include\glm\detail\func_common_simd.inl" />
     <None Include="vendor\include\glm\detail\func_exponential.inl" />
