--- a/overflow.vcxproj.filters
+++ b/overflow.vcxproj.filters
@@ -1338,6 +1338,9 @@
     <ClInclude Include="src\scene\vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\glErrors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
