--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -132,8 +132,10 @@
   <ItemGroup>
     <None Include="README.md" />
     <None Include="src\scene\README.md" />
-    <None Include="src\shaders\fragment\simple.frag" />
-    <None Include="src\shaders\vertex\simple.vert" />
+    <None Include="src\shaders\fragment\droplet.frag" />
+    <None Include="src\shaders\fragment\terrain.frag" />
+    <None Include="src\shaders\vertex\droplet.vert" />
+    <None Include="src\shaders\vertex\terrain.vert" />
     <None Include="vendor\include\glm\detail\func_common.inl" />
     <None Include="vendor\include\glm\detail\func_common_simd.inl" />
     <None Include="vendor\include\glm\detail\func_exponential.inl" />
@@ -288,6 +290,7 @@
     <ClInclude Include="src\imgui\misc\cpp\imgui_stdlib.h" />
     <ClInclude Include="src\imgui\misc\single_file\imgui_single_file.h" />
     <ClInclude Include="src\rendering\shaderProgram.h" />
+    <ClInclude Include="src\scene\droplets.h" />
     <ClInclude Include="src\scene\scene.h" />
     <ClInclude Include="src\scene\terrain.h" />
     <ClInclude Include="src\scene\vertex.h" />
