--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -597,6 +597,7 @@
     <ClCompile Include="src\imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\rendering\shaderProgram.cpp" />
+    <ClCompile Include="src\scene\droplets.cpp" />
     <ClCompile Include="src\scene\scene.cpp" />
     <ClCompile Include="vendor\include\glm\detail\glm.cpp" />
   </ItemGroup>
