--- a/overflow.vcxproj.filters
+++ b/overflow.vcxproj.filters
@@ -427,8 +427,8 @@
     <None Include="src\scene\README.md" />
     <None Include="src\shaders\vertex\terrain.vert" />
     <None Include="src\shaders\fragment\terrain.frag" />
-    <None Include="src\shaders\vertex\droplet.vert" />
-    <None Include="src\shaders\fragment\droplet.frag" />
+    <None Include="src\shaders\vertex\droplets.vert" />
+    <None Include="src\shaders\fragment\droplets.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vendor\include\glad\glad.h">
