--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -68,20 +68,22 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>src\imgui\backends;src\imgui;vendor\include;$(IncludePath)</IncludePath>
-    <LibraryPath>vendor\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>vendor\include\GLFW;vendor\include\glm;vendor\include\physx;src\imgui\backends;src\imgui;vendor\include;$(IncludePath)</IncludePath>
+    <LibraryPath>vendor\lib;vendor\lib\GLFW;vendor\lib\physx;$(LibraryPath)</LibraryPath>
     <OutDir>bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>bin\$(Platform)\$(Configuration)\</IntDir>
+    <ReferencePath>vendor\lib\physx;$(VC_ReferencesPath_x64);</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>src\imgui\backends;src\imgui;vendor\include;$(IncludePath)</IncludePath>
-    <LibraryPath>vendor\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>vendor\include\GLFW;vendor\include\glm;vendor\include\physx;src\imgui\backends;src\imgui;vendor\include;$(IncludePath)</IncludePath>
+    <LibraryPath>vendor\lib;vendor\lib\GLFW;vendor\lib\physx;$(LibraryPath)</LibraryPath>
     <OutDir>bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>bin\$(Platform)\$(Configuration)\</IntDir>
+    <ReferencePath>$(VC_ReferencesPath_x64);</ReferencePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -130,6 +132,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="bin\x64\Debug\PhysXCommon_64.dll" />
+    <None Include="bin\x64\Debug\PhysXCommon_64.map" />
+    <None Include="bin\x64\Debug\PhysXCooking_64.dll" />
+    <None Include="bin\x64\Debug\PhysXCooking_64.map" />
+    <None Include="bin\x64\Debug\PhysXDevice64.dll" />
+    <None Include="bin\x64\Debug\PhysXFoundation_64.dll" />
+    <None Include="bin\x64\Debug\PhysXGpu_64.dll" />
+    <None Include="bin\x64\Debug\PhysX_64.dll" />
+    <None Include="bin\x64\Debug\PhysX_64.map" />
     <None Include="README.md" />
     <None Include="src\scene\README.md" />
     <None Include="src\shaders\fragment\droplets.frag" />
@@ -272,6 +283,10 @@
     <None Include="vendor\include\glm\gtx\vector_angle.inl" />
     <None Include="vendor\include\glm\gtx\vector_query.inl" />
     <None Include="vendor\include\glm\gtx\wrap.inl" />
+    <None Include="vendor\lib\physx\PhysXCommon_64.exp" />
+    <None Include="vendor\lib\physx\PhysXCooking_64.exp" />
+    <None Include="vendor\lib\physx\PhysXFoundation_64.exp" />
+    <None Include="vendor\lib\physx\PhysX_64.exp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\physics\simulator.h" />
@@ -969,7 +984,22 @@
     <ClCompile Include="vendor\include\glm\detail\glm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="vendor\lib\glfw3.lib" />
+    <Library Include="vendor\lib\GLFW\glfw3.lib" />
+    <Library Include="vendor\lib\physx\LowLevelAABB_static_64.lib" />
+    <Library Include="vendor\lib\physx\LowLevelDynamics_static_64.lib" />
+    <Library Include="vendor\lib\physx\LowLevel_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCharacterKinematic_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCommon_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCooking_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXExtensions_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXFoundation_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXPvdSDK_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXTask_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXVehicle2_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXVehicle_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysX_64.lib" />
+    <Library Include="vendor\lib\physx\SceneQuery_static_64.lib" />
+    <Library Include="vendor\lib\physx\SimulationController_static_64.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
