--- a/overflow.vcxproj.filters
+++ b/overflow.vcxproj.filters
@@ -429,6 +429,19 @@
     <None Include="src\shaders\fragment\terrain.frag" />
     <None Include="src\shaders\vertex\droplets.vert" />
     <None Include="src\shaders\fragment\droplets.frag" />
+    <None Include="vendor\lib\physx\PhysXFoundation_64.exp" />
+    <None Include="vendor\lib\physx\PhysXCooking_64.exp" />
+    <None Include="vendor\lib\physx\PhysXCommon_64.exp" />
+    <None Include="vendor\lib\physx\PhysX_64.exp" />
+    <None Include="bin\x64\Debug\PhysXGpu_64.dll" />
+    <None Include="bin\x64\Debug\PhysXFoundation_64.dll" />
+    <None Include="bin\x64\Debug\PhysXDevice64.dll" />
+    <None Include="bin\x64\Debug\PhysXCooking_64.dll" />
+    <None Include="bin\x64\Debug\PhysXCommon_64.dll" />
+    <None Include="bin\x64\Debug\PhysX_64.dll" />
+    <None Include="bin\x64\Debug\PhysX_64.map" />
+    <None Include="bin\x64\Debug\PhysXCommon_64.map" />
+    <None Include="bin\x64\Debug\PhysXCooking_64.map" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vendor\include\glad\glad.h">
@@ -2508,6 +2521,21 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="vendor\lib\glfw3.lib" />
+    <Library Include="vendor\lib\GLFW\glfw3.lib" />
+    <Library Include="vendor\lib\physx\SimulationController_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXVehicle2_static_64.lib" />
+    <Library Include="vendor\lib\physx\SceneQuery_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXVehicle_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXTask_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXPvdSDK_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXFoundation_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXExtensions_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCooking_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCommon_64.lib" />
+    <Library Include="vendor\lib\physx\PhysXCharacterKinematic_static_64.lib" />
+    <Library Include="vendor\lib\physx\PhysX_64.lib" />
+    <Library Include="vendor\lib\physx\LowLevelDynamics_static_64.lib" />
+    <Library Include="vendor\lib\physx\LowLevelAABB_static_64.lib" />
+    <Library Include="vendor\lib\physx\LowLevel_static_64.lib" />
   </ItemGroup>
 </Project>
