--- a/overflow.vcxproj
+++ b/overflow.vcxproj
@@ -290,6 +290,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\physics\simulator.h" />
+    <ClInclude Include="src\generators\noise.h" />
     <ClInclude Include="src\scene\camera.h" />
     <ClInclude Include="src\glErrors.h" />
     <ClInclude Include="src\rendering\renderer.h" />
@@ -311,6 +312,7 @@
     <ClInclude Include="src\scene\terrain.h" />
     <ClInclude Include="src\scene\texture.h" />
     <ClInclude Include="src\scene\vertex.h" />
+    <ClInclude Include="src\generators\terrainGenerator.h" />
     <ClInclude Include="vendor\include\glad\glad.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3.h" />
     <ClInclude Include="vendor\include\GLFW\glfw3native.h" />
@@ -966,6 +968,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\physics\simulator.cpp" />
+    <ClCompile Include="src\generators\noise.cpp" />
     <ClCompile Include="src\scene\camera.cpp" />
     <ClCompile Include="src\glObjects.h" />
     <ClCompile Include="src\rendering\renderer.cpp" />
@@ -985,6 +988,7 @@
     <ClCompile Include="src\scene\scene.cpp" />
     <ClCompile Include="src\scene\terrain.cpp" />
     <ClCompile Include="src\scene\texture.cpp" />
+    <ClCompile Include="src\generators\terrainGenerator.cpp" />
     <ClCompile Include="vendor\include\glm\detail\glm.cpp" />
   </ItemGroup>
   <ItemGroup>
