Bug fixing and completing odds and ends

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=125,77
 Collapsed=0
 
 [Window][Droplet Spawner]
-Pos=0,2
+Pos=-1,2
 Size=658,75
+Collapsed=0
+
+[Window][Simulation Parameters]
+Pos=542,716
+Size=255,77
 Collapsed=0
 
